parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    FORWARD
    FUNCTION
    INTERVAL
    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENT SEMICOLON outblock PERIOD
Rule 2     outblock -> var_decl_part subprog_decl_part outblock_action statement
Rule 3     outblock_action -> <empty>
Rule 4     var_decl_part -> var_decl_list SEMICOLON
Rule 5     var_decl_part -> <empty>
Rule 6     var_decl_list -> var_decl_list SEMICOLON var_decl
Rule 7     var_decl_list -> var_decl
Rule 8     var_decl -> VAR id_list
Rule 9     subprog_decl_part -> subprog_decl_list SEMICOLON
Rule 10    subprog_decl_part -> <empty>
Rule 11    subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl
Rule 12    subprog_decl_list -> subprog_decl
Rule 13    subprog_decl -> proc_decl
Rule 14    proc_decl -> PROCEDURE proc_name SEMICOLON proc_decl_action_1 inblock proc_decl_action_2
Rule 15    proc_decl_action_1 -> <empty>
Rule 16    proc_decl_action_2 -> <empty>
Rule 17    proc_name -> IDENT proc_name_action
Rule 18    proc_name_action -> <empty>
Rule 19    inblock -> var_decl_part statement
Rule 20    statement_list -> statement_list SEMICOLON statement
Rule 21    statement_list -> statement
Rule 22    statement -> assignment_statement
Rule 23    statement -> if_statement
Rule 24    statement -> while_statement
Rule 25    statement -> for_statement
Rule 26    statement -> proc_call_statement
Rule 27    statement -> null_statement
Rule 28    statement -> block_statement
Rule 29    statement -> read_statement
Rule 30    statement -> write_statement
Rule 31    assignment_statement -> IDENT assignment_statement_action ASSIGN expression
Rule 32    assignment_statement_action -> <empty>
Rule 33    if_statement -> IF condition THEN statement else_statement
Rule 34    else_statement -> ELSE statement
Rule 35    else_statement -> <empty>
Rule 36    while_statement -> WHILE condition DO statement
Rule 37    for_statement -> FOR IDENT for_statement_action ASSIGN expression TO expression DO statement
Rule 38    for_statement_action -> <empty>
Rule 39    proc_call_statement -> proc_call_name
Rule 40    proc_call_name -> IDENT proc_call_name_action
Rule 41    proc_call_name_action -> <empty>
Rule 42    block_statement -> BEGIN statement_list END
Rule 43    read_statement -> READ LPAREN IDENT read_statement_action RPAREN
Rule 44    read_statement_action -> <empty>
Rule 45    write_statement -> WRITE LPAREN expression RPAREN
Rule 46    null_statement -> <empty>
Rule 47    condition -> expression EQ expression
Rule 48    condition -> expression NEQ expression
Rule 49    condition -> expression LT expression
Rule 50    condition -> expression GT expression
Rule 51    condition -> expression LE expression
Rule 52    condition -> expression GE expression
Rule 53    expression -> term
Rule 54    expression -> PLUS term
Rule 55    expression -> MINUS term
Rule 56    expression -> expression PLUS term
Rule 57    expression -> expression MINUS term
Rule 58    term -> factor
Rule 59    term -> term MULT factor
Rule 60    term -> term DIV factor
Rule 61    factor -> var_name
Rule 62    factor -> NUMBER
Rule 63    factor -> LPAREN expression RPAREN
Rule 64    var_name -> IDENT var_name_action
Rule 65    var_name_action -> <empty>
Rule 66    arg_list -> expression
Rule 67    arg_list -> arg_list COMMA expression
Rule 68    id_list -> IDENT id_list_action
Rule 69    id_list -> id_list COMMA IDENT id_list_action
Rule 70    id_list_action -> <empty>

Terminals, with rules where they appear

ASSIGN               : 31 37
BEGIN                : 42
COLON                : 
COMMA                : 67 69
DIV                  : 60
DO                   : 36 37
ELSE                 : 34
END                  : 42
EQ                   : 47
FOR                  : 37
FORWARD              : 
FUNCTION             : 
GE                   : 52
GT                   : 50
IDENT                : 1 17 31 37 40 43 64 68 69
IF                   : 33
INTERVAL             : 
LBRACKET             : 
LE                   : 51
LPAREN               : 43 45 63
LT                   : 49
MINUS                : 55 57
MULT                 : 59
NEQ                  : 48
NUMBER               : 62
PERIOD               : 1
PLUS                 : 54 56
PROCEDURE            : 14
PROGRAM              : 1
RBRACKET             : 
READ                 : 43
RPAREN               : 43 45 63
SEMICOLON            : 1 4 6 9 11 14 20
THEN                 : 33
TO                   : 37
VAR                  : 8
WHILE                : 36
WRITE                : 45
error                : 

Nonterminals, with rules where they appear

arg_list             : 67
assignment_statement : 22
assignment_statement_action : 31
block_statement      : 28
condition            : 33 36
else_statement       : 33
expression           : 31 37 37 45 47 47 48 48 49 49 50 50 51 51 52 52 56 57 63 66 67
factor               : 58 59 60
for_statement        : 25
for_statement_action : 37
id_list              : 8 69
id_list_action       : 68 69
if_statement         : 23
inblock              : 14
null_statement       : 27
outblock             : 1
outblock_action      : 2
proc_call_name       : 39
proc_call_name_action : 40
proc_call_statement  : 26
proc_decl            : 13
proc_decl_action_1   : 14
proc_decl_action_2   : 14
proc_name            : 14
proc_name_action     : 17
program              : 0
read_statement       : 29
read_statement_action : 43
statement            : 2 19 20 21 33 34 36 37
statement_list       : 20 42
subprog_decl         : 11 12
subprog_decl_list    : 9 11
subprog_decl_part    : 2
term                 : 53 54 55 56 57 59 60
var_decl             : 6 7
var_decl_list        : 4 6
var_decl_part        : 2 19
var_name             : 61
var_name_action      : 64
while_statement      : 24
write_statement      : 30

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENT SEMICOLON outblock PERIOD

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENT SEMICOLON outblock PERIOD

    IDENT           shift and go to state 3


state 3

    (1) program -> PROGRAM IDENT . SEMICOLON outblock PERIOD

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM IDENT SEMICOLON . outblock PERIOD
    (2) outblock -> . var_decl_part subprog_decl_part outblock_action statement
    (4) var_decl_part -> . var_decl_list SEMICOLON
    (5) var_decl_part -> .
    (6) var_decl_list -> . var_decl_list SEMICOLON var_decl
    (7) var_decl_list -> . var_decl
    (8) var_decl -> . VAR id_list

    PROCEDURE       reduce using rule 5 (var_decl_part -> .)
    IDENT           reduce using rule 5 (var_decl_part -> .)
    IF              reduce using rule 5 (var_decl_part -> .)
    WHILE           reduce using rule 5 (var_decl_part -> .)
    FOR             reduce using rule 5 (var_decl_part -> .)
    BEGIN           reduce using rule 5 (var_decl_part -> .)
    READ            reduce using rule 5 (var_decl_part -> .)
    WRITE           reduce using rule 5 (var_decl_part -> .)
    PERIOD          reduce using rule 5 (var_decl_part -> .)
    VAR             shift and go to state 9

    outblock                       shift and go to state 5
    var_decl_part                  shift and go to state 6
    var_decl_list                  shift and go to state 7
    var_decl                       shift and go to state 8

state 5

    (1) program -> PROGRAM IDENT SEMICOLON outblock . PERIOD

    PERIOD          shift and go to state 10


state 6

    (2) outblock -> var_decl_part . subprog_decl_part outblock_action statement
    (9) subprog_decl_part -> . subprog_decl_list SEMICOLON
    (10) subprog_decl_part -> .
    (11) subprog_decl_list -> . subprog_decl_list SEMICOLON subprog_decl
    (12) subprog_decl_list -> . subprog_decl
    (13) subprog_decl -> . proc_decl
    (14) proc_decl -> . PROCEDURE proc_name SEMICOLON proc_decl_action_1 inblock proc_decl_action_2

    IDENT           reduce using rule 10 (subprog_decl_part -> .)
    IF              reduce using rule 10 (subprog_decl_part -> .)
    WHILE           reduce using rule 10 (subprog_decl_part -> .)
    FOR             reduce using rule 10 (subprog_decl_part -> .)
    BEGIN           reduce using rule 10 (subprog_decl_part -> .)
    READ            reduce using rule 10 (subprog_decl_part -> .)
    WRITE           reduce using rule 10 (subprog_decl_part -> .)
    PERIOD          reduce using rule 10 (subprog_decl_part -> .)
    PROCEDURE       shift and go to state 15

    subprog_decl_part              shift and go to state 11
    subprog_decl_list              shift and go to state 12
    subprog_decl                   shift and go to state 13
    proc_decl                      shift and go to state 14

state 7

    (4) var_decl_part -> var_decl_list . SEMICOLON
    (6) var_decl_list -> var_decl_list . SEMICOLON var_decl

    SEMICOLON       shift and go to state 16


state 8

    (7) var_decl_list -> var_decl .

    SEMICOLON       reduce using rule 7 (var_decl_list -> var_decl .)


state 9

    (8) var_decl -> VAR . id_list
    (68) id_list -> . IDENT id_list_action
    (69) id_list -> . id_list COMMA IDENT id_list_action

    IDENT           shift and go to state 18

    id_list                        shift and go to state 17

state 10

    (1) program -> PROGRAM IDENT SEMICOLON outblock PERIOD .

    $end            reduce using rule 1 (program -> PROGRAM IDENT SEMICOLON outblock PERIOD .)


state 11

    (2) outblock -> var_decl_part subprog_decl_part . outblock_action statement
    (3) outblock_action -> .

    IDENT           reduce using rule 3 (outblock_action -> .)
    IF              reduce using rule 3 (outblock_action -> .)
    WHILE           reduce using rule 3 (outblock_action -> .)
    FOR             reduce using rule 3 (outblock_action -> .)
    BEGIN           reduce using rule 3 (outblock_action -> .)
    READ            reduce using rule 3 (outblock_action -> .)
    WRITE           reduce using rule 3 (outblock_action -> .)
    PERIOD          reduce using rule 3 (outblock_action -> .)

    outblock_action                shift and go to state 19

state 12

    (9) subprog_decl_part -> subprog_decl_list . SEMICOLON
    (11) subprog_decl_list -> subprog_decl_list . SEMICOLON subprog_decl

    SEMICOLON       shift and go to state 20


state 13

    (12) subprog_decl_list -> subprog_decl .

    SEMICOLON       reduce using rule 12 (subprog_decl_list -> subprog_decl .)


state 14

    (13) subprog_decl -> proc_decl .

    SEMICOLON       reduce using rule 13 (subprog_decl -> proc_decl .)


state 15

    (14) proc_decl -> PROCEDURE . proc_name SEMICOLON proc_decl_action_1 inblock proc_decl_action_2
    (17) proc_name -> . IDENT proc_name_action

    IDENT           shift and go to state 22

    proc_name                      shift and go to state 21

state 16

    (4) var_decl_part -> var_decl_list SEMICOLON .
    (6) var_decl_list -> var_decl_list SEMICOLON . var_decl
    (8) var_decl -> . VAR id_list

    PROCEDURE       reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    IDENT           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    IF              reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    WHILE           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    FOR             reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    BEGIN           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    READ            reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    WRITE           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    PERIOD          reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    SEMICOLON       reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    VAR             shift and go to state 9

    var_decl                       shift and go to state 23

state 17

    (8) var_decl -> VAR id_list .
    (69) id_list -> id_list . COMMA IDENT id_list_action

    SEMICOLON       reduce using rule 8 (var_decl -> VAR id_list .)
    COMMA           shift and go to state 24


state 18

    (68) id_list -> IDENT . id_list_action
    (70) id_list_action -> .

    COMMA           reduce using rule 70 (id_list_action -> .)
    SEMICOLON       reduce using rule 70 (id_list_action -> .)

    id_list_action                 shift and go to state 25

state 19

    (2) outblock -> var_decl_part subprog_decl_part outblock_action . statement
    (22) statement -> . assignment_statement
    (23) statement -> . if_statement
    (24) statement -> . while_statement
    (25) statement -> . for_statement
    (26) statement -> . proc_call_statement
    (27) statement -> . null_statement
    (28) statement -> . block_statement
    (29) statement -> . read_statement
    (30) statement -> . write_statement
    (31) assignment_statement -> . IDENT assignment_statement_action ASSIGN expression
    (33) if_statement -> . IF condition THEN statement else_statement
    (36) while_statement -> . WHILE condition DO statement
    (37) for_statement -> . FOR IDENT for_statement_action ASSIGN expression TO expression DO statement
    (39) proc_call_statement -> . proc_call_name
    (46) null_statement -> .
    (42) block_statement -> . BEGIN statement_list END
    (43) read_statement -> . READ LPAREN IDENT read_statement_action RPAREN
    (45) write_statement -> . WRITE LPAREN expression RPAREN
    (40) proc_call_name -> . IDENT proc_call_name_action

    IDENT           shift and go to state 36
    IF              shift and go to state 37
    WHILE           shift and go to state 38
    FOR             shift and go to state 39
    PERIOD          reduce using rule 46 (null_statement -> .)
    BEGIN           shift and go to state 41
    READ            shift and go to state 42
    WRITE           shift and go to state 43

    statement                      shift and go to state 26
    assignment_statement           shift and go to state 27
    if_statement                   shift and go to state 28
    while_statement                shift and go to state 29
    for_statement                  shift and go to state 30
    proc_call_statement            shift and go to state 31
    null_statement                 shift and go to state 32
    block_statement                shift and go to state 33
    read_statement                 shift and go to state 34
    write_statement                shift and go to state 35
    proc_call_name                 shift and go to state 40

state 20

    (9) subprog_decl_part -> subprog_decl_list SEMICOLON .
    (11) subprog_decl_list -> subprog_decl_list SEMICOLON . subprog_decl
    (13) subprog_decl -> . proc_decl
    (14) proc_decl -> . PROCEDURE proc_name SEMICOLON proc_decl_action_1 inblock proc_decl_action_2

    IDENT           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    IF              reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    WHILE           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    FOR             reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    BEGIN           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    READ            reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    WRITE           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    PERIOD          reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    PROCEDURE       shift and go to state 15

    subprog_decl                   shift and go to state 44
    proc_decl                      shift and go to state 14

state 21

    (14) proc_decl -> PROCEDURE proc_name . SEMICOLON proc_decl_action_1 inblock proc_decl_action_2

    SEMICOLON       shift and go to state 45


state 22

    (17) proc_name -> IDENT . proc_name_action
    (18) proc_name_action -> .

    SEMICOLON       reduce using rule 18 (proc_name_action -> .)

    proc_name_action               shift and go to state 46

state 23

    (6) var_decl_list -> var_decl_list SEMICOLON var_decl .

    SEMICOLON       reduce using rule 6 (var_decl_list -> var_decl_list SEMICOLON var_decl .)


state 24

    (69) id_list -> id_list COMMA . IDENT id_list_action

    IDENT           shift and go to state 47


state 25

    (68) id_list -> IDENT id_list_action .

    COMMA           reduce using rule 68 (id_list -> IDENT id_list_action .)
    SEMICOLON       reduce using rule 68 (id_list -> IDENT id_list_action .)


state 26

    (2) outblock -> var_decl_part subprog_decl_part outblock_action statement .

    PERIOD          reduce using rule 2 (outblock -> var_decl_part subprog_decl_part outblock_action statement .)


state 27

    (22) statement -> assignment_statement .

    PERIOD          reduce using rule 22 (statement -> assignment_statement .)
    END             reduce using rule 22 (statement -> assignment_statement .)
    SEMICOLON       reduce using rule 22 (statement -> assignment_statement .)
    ELSE            reduce using rule 22 (statement -> assignment_statement .)


state 28

    (23) statement -> if_statement .

    PERIOD          reduce using rule 23 (statement -> if_statement .)
    END             reduce using rule 23 (statement -> if_statement .)
    SEMICOLON       reduce using rule 23 (statement -> if_statement .)
    ELSE            reduce using rule 23 (statement -> if_statement .)


state 29

    (24) statement -> while_statement .

    PERIOD          reduce using rule 24 (statement -> while_statement .)
    END             reduce using rule 24 (statement -> while_statement .)
    SEMICOLON       reduce using rule 24 (statement -> while_statement .)
    ELSE            reduce using rule 24 (statement -> while_statement .)


state 30

    (25) statement -> for_statement .

    PERIOD          reduce using rule 25 (statement -> for_statement .)
    END             reduce using rule 25 (statement -> for_statement .)
    SEMICOLON       reduce using rule 25 (statement -> for_statement .)
    ELSE            reduce using rule 25 (statement -> for_statement .)


state 31

    (26) statement -> proc_call_statement .

    PERIOD          reduce using rule 26 (statement -> proc_call_statement .)
    END             reduce using rule 26 (statement -> proc_call_statement .)
    SEMICOLON       reduce using rule 26 (statement -> proc_call_statement .)
    ELSE            reduce using rule 26 (statement -> proc_call_statement .)


state 32

    (27) statement -> null_statement .

    PERIOD          reduce using rule 27 (statement -> null_statement .)
    END             reduce using rule 27 (statement -> null_statement .)
    SEMICOLON       reduce using rule 27 (statement -> null_statement .)
    ELSE            reduce using rule 27 (statement -> null_statement .)


state 33

    (28) statement -> block_statement .

    PERIOD          reduce using rule 28 (statement -> block_statement .)
    END             reduce using rule 28 (statement -> block_statement .)
    SEMICOLON       reduce using rule 28 (statement -> block_statement .)
    ELSE            reduce using rule 28 (statement -> block_statement .)


state 34

    (29) statement -> read_statement .

    PERIOD          reduce using rule 29 (statement -> read_statement .)
    END             reduce using rule 29 (statement -> read_statement .)
    SEMICOLON       reduce using rule 29 (statement -> read_statement .)
    ELSE            reduce using rule 29 (statement -> read_statement .)


state 35

    (30) statement -> write_statement .

    PERIOD          reduce using rule 30 (statement -> write_statement .)
    END             reduce using rule 30 (statement -> write_statement .)
    SEMICOLON       reduce using rule 30 (statement -> write_statement .)
    ELSE            reduce using rule 30 (statement -> write_statement .)


state 36

    (31) assignment_statement -> IDENT . assignment_statement_action ASSIGN expression
    (40) proc_call_name -> IDENT . proc_call_name_action
    (32) assignment_statement_action -> .
    (41) proc_call_name_action -> .

    ASSIGN          reduce using rule 32 (assignment_statement_action -> .)
    PERIOD          reduce using rule 41 (proc_call_name_action -> .)
    END             reduce using rule 41 (proc_call_name_action -> .)
    SEMICOLON       reduce using rule 41 (proc_call_name_action -> .)
    ELSE            reduce using rule 41 (proc_call_name_action -> .)

    assignment_statement_action    shift and go to state 48
    proc_call_name_action          shift and go to state 49

state 37

    (33) if_statement -> IF . condition THEN statement else_statement
    (47) condition -> . expression EQ expression
    (48) condition -> . expression NEQ expression
    (49) condition -> . expression LT expression
    (50) condition -> . expression GT expression
    (51) condition -> . expression LE expression
    (52) condition -> . expression GE expression
    (53) expression -> . term
    (54) expression -> . PLUS term
    (55) expression -> . MINUS term
    (56) expression -> . expression PLUS term
    (57) expression -> . expression MINUS term
    (58) term -> . factor
    (59) term -> . term MULT factor
    (60) term -> . term DIV factor
    (61) factor -> . var_name
    (62) factor -> . NUMBER
    (63) factor -> . LPAREN expression RPAREN
    (64) var_name -> . IDENT var_name_action

    PLUS            shift and go to state 53
    MINUS           shift and go to state 54
    NUMBER          shift and go to state 57
    LPAREN          shift and go to state 58
    IDENT           shift and go to state 59

    condition                      shift and go to state 50
    expression                     shift and go to state 51
    term                           shift and go to state 52
    factor                         shift and go to state 55
    var_name                       shift and go to state 56

state 38
